rewrite storage according requirements